--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ android {
 }
 
 dependencies {
+    apply plugin: 'kotlin-kapt'
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
@@ -32,8 +33,10 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'com.google.android.material:material:1.2.1'
-    implementation 'com.android.support:design:27.1.0'
     implementation 'androidx.fragment:fragment-ktx:1.1.0'
+    implementation "androidx.room:room-runtime:2.1.0-alpha06"
+    annotationProcessor "androidx.room:room-compiler:2.1.0-alpha06"
+    kapt "androidx.room:room-compiler:2.1.0-alpha06"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
