--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ android {
     compileSdkVersion 30
     buildToolsVersion '30.0.1'
 
+
     defaultConfig {
         applicationId "com.example.bbokkibbokki"
         minSdkVersion 21
@@ -22,6 +23,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
@@ -34,11 +36,15 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.fragment:fragment-ktx:1.1.0'
-    implementation "androidx.room:room-runtime:2.1.0-alpha06"
-    annotationProcessor "androidx.room:room-compiler:2.1.0-alpha06"
-    kapt "androidx.room:room-compiler:2.1.0-alpha06"
+
+    def roomVersion = '2.2.5'
+    implementation "androidx.room:room-runtime:$roomVersion"
+    kapt "androidx.room:room-compiler:$roomVersion"
+    implementation "androidx.room:room-ktx:$roomVersion"
+    androidTestImplementation "androidx.room:room-testing:$roomVersion"
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
+    debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
 }
