--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Oct 05 10:11:05 KST 2020
-sdk.dir=C\:\\Users\\Playdata\\AppData\\Local\\Android\\Sdk
+#Mon Nov 30 21:41:43 KST 2020
+sdk.dir=C\:\\Users\\Junsoo\\AppData\\Local\\Android\\Sdk
